--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<div class="header"></div>
 		<div class="footer"></div>
 		
-		<script src="lib/jquery_plugins/require.js" data-main="js/index.js"></script>
+		<script src="lib/requirejs/require.js" data-main="js/index.js"></script>
 	</body>
 </html>
